portfolio section update

--- a/portfolio.html
+++ b/portfolio.html
@@ -213,7 +213,7 @@
                                 
                                 <a href="https://www.figma.com/design/OOimtPCFxmO7gjyZlURIS6/%EB%B0%98%EC%9D%91%ED%98%95---%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84---%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=ErPOwQ50M2eJzwyP-1" target="_blank">Figma</a>
 
-                                <a href="https://drive.google.com/file/d/1LjFG4csA6b2jhwO1uJYyBJ8QPfo0ztoN/view?usp=sharing" target="_blank">Proposal</a>
+                                <a href="https://drive.google.com/file/d/1VXKqYukRnsJkJ3d4OmkWwDO3pudQkhnL/view?usp=sharing" target="_blank">Proposal</a>
                             </div>
                         </div>
                     </div>
@@ -361,7 +361,7 @@
                                     Site 2
                                 </a>
 
-                                <a href="https://drive.google.com/file/d/16aTuG-dhqMvrp6-FuIg1TnLOyjCh3Bw4/view?usp=sharing" target="_blank">Proposal</a>
+                                <a href="https://drive.google.com/file/d/18eGV2mE9RmYTHOrA88-gLBMvN5-UVa1v/view?usp=sharing" target="_blank">Proposal</a>
 
                                 <a href="https://www.figma.com/design/W4wouOvimxu0OvxH8vhPlZ/%ED%95%B4%ED%83%9C-%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?node-id=0-1&t=YZh15PnlR8YlN4bs-1" target="_blank">Figma</a>
                             </div>
@@ -378,6 +378,10 @@
                             <li><img src="img/work04-6.PNG" alt="work04-6"></li>
                             <li><img src="img/work04-7.PNG" alt="work04-7"></li>
                             <li><img src="img/work04-8.PNG" alt="work04-8"></li>
+                            <li><img src="img/work04-9.PNG" alt="work04-9"></li>
+                            <li><img src="img/work04-10.PNG" alt="work04-10"></li>
+                            <li><img src="img/work04-11.PNG" alt="work04-11"></li>
+                            <li><img src="img/work04-12.PNG" alt="work04-12"></li>
 
                             <li><img src="img/work04-1.PNG" alt="work04-1"></li>
                             <li><img src="img/work04-2.PNG" alt="work04-2"></li>
@@ -387,6 +391,10 @@
                             <li><img src="img/work04-6.PNG" alt="work04-6"></li>
                             <li><img src="img/work04-7.PNG" alt="work04-7"></li>
                             <li><img src="img/work04-8.PNG" alt="work04-8"></li>
+                            <li><img src="img/work04-9.PNG" alt="work04-9"></li>
+                            <li><img src="img/work04-10.PNG" alt="work04-10"></li>
+                            <li><img src="img/work04-11.PNG" alt="work04-11"></li>
+                            <li><img src="img/work04-12.PNG" alt="work04-12"></li>
                         </ul>
                     </div>
 
