Adding proposal pdf

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="footer3">
-                    <p>LAST UPDATED 2025-11-10</p>
+                    <p>LAST UPDATED 2025-11-18</p>
                 </div>
             </footer>
         </aside>
@@ -73,7 +73,7 @@
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=seohee1880@gmail.com" target="_blank" class="em">seohee1880@gmail.com</a>
             
             <p class="copy">
-                2025 © SEOHEE LEE. ALL RIGHTS RESERVED.
+                2025 &copy; SEOHEE LEE. ALL RIGHTS RESERVED.
             </p>
         </div>
     </div>
