--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="footer3">
-                    <p>LAST UPDATED 2025-11-10</p>
+                    <p>LAST UPDATED 2025-11-18</p>
                 </div>
             </footer>
         </aside>
@@ -144,6 +144,8 @@
                                 </a>
                                 
                                 <a href="https://www.figma.com/design/HUAPB1lWAKETxydPPyYZbt/%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?node-id=0-1&t=jSX0Yf2cQKHAxNQQ-1" target="_blank">Figma</a>
+
+                                <a href="https://www.figma.com/design/pHLIWoCkLPlo7t3gohvOVV/%EB%AA%A8%EB%B0%94%EC%9D%BC_-%ED%94%84%EB%A1%9C%ED%86%A0%ED%83%80%EC%9E%85?node-id=0-1&t=6DkVM77zG3rptmum-1" target="_blank">Prototype</a>
                             </div>
                         </div>
                     </div>
@@ -213,7 +215,7 @@
                                 
                                 <a href="https://www.figma.com/design/OOimtPCFxmO7gjyZlURIS6/%EB%B0%98%EC%9D%91%ED%98%95---%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84---%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=ErPOwQ50M2eJzwyP-1" target="_blank">Figma</a>
 
-                                <a href="https://drive.google.com/file/d/1VXKqYukRnsJkJ3d4OmkWwDO3pudQkhnL/view?usp=sharing" target="_blank">Proposal</a>
+                                <a href="pdf/rw_proposal.pdf" target="_blank">Proposal</a>
                             </div>
                         </div>
                     </div>
@@ -361,7 +363,7 @@
                                     Site 2
                                 </a>
 
-                                <a href="https://drive.google.com/file/d/18eGV2mE9RmYTHOrA88-gLBMvN5-UVa1v/view?usp=sharing" target="_blank">Proposal</a>
+                                <a href="pdf/team_proposal.pdf" target="_blank">Proposal</a>
 
                                 <a href="https://www.figma.com/design/W4wouOvimxu0OvxH8vhPlZ/%ED%95%B4%ED%83%9C-%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?node-id=0-1&t=YZh15PnlR8YlN4bs-1" target="_blank">Figma</a>
                             </div>
