기획서 주소 수정

--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,7 @@
                                 
                                 <a href="https://www.figma.com/design/OOimtPCFxmO7gjyZlURIS6/%EB%B0%98%EC%9D%91%ED%98%95---%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84---%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=ErPOwQ50M2eJzwyP-1" target="_blank">Figma</a>
 
-                                <a href="pdf/rw_proposal.pdf" target="_blank">Proposal</a>
+                                <a href="https://drive.google.com/file/d/1VXKqYukRnsJkJ3d4OmkWwDO3pudQkhnL/view?usp=sharing" target="_blank">Proposal</a>
                             </div>
                         </div>
                     </div>
@@ -363,7 +363,7 @@
                                     Site 2
                                 </a>
 
-                                <a href="pdf/team_proposal.pdf" target="_blank">Proposal</a>
+                                <a href="https://drive.google.com/file/d/1tJqkP-4WFT204Wroqigr5s_-gveMT3fL/view?usp=sharing" target="_blank">Proposal</a>
 
                                 <a href="https://www.figma.com/design/W4wouOvimxu0OvxH8vhPlZ/%ED%95%B4%ED%83%9C-%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?node-id=0-1&t=YZh15PnlR8YlN4bs-1" target="_blank">Figma</a>
                             </div>
