--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/common_res.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/animation.css">
     <link rel="stylesheet" href="css/dark.css">
